--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
